@@ -346,6 +346,7 @@ PHP if you have not done so prior to upgrading MediaWiki.
 * YAML API output is now 1.2 compliant, using JSON as the formatter
 * (bug 28672) give information about misermode on api
 * (bug 28558) Add iw_api and iw_wikiid to meta=siteinfo&siprop=interwikimap
+* (bug 26882) Allow listing of indefinite protections with the api
 
 === Languages updated in 1.18 ===
 
